Express_MongoDB_V6/k8s/monitoring/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    project: modou-ndiaye
    purpose: observability
